--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -25,58 +25,22 @@ cc_library(
     srcs = glob([
         "src/tbb/*.cpp",
         "src/tbb/*.h",
-    ]) + select({
-        "@platforms//cpu:x86_64": glob(["src/tbb/tools_api/**/*.h"]),
-        "//conditions:default": [],
-    }),
+        "src/tbb/tools_api/**/*.h",
+    ])
     hdrs = glob([
         "include/tbb/*.h",
         "include/oneapi/*.h",
         "include/oneapi/tbb/*.h",
         "include/oneapi/tbb/detail/*.h",
     ]),
-    copts = ["-w"] + select({
-        "@bazel_tools//platforms:windows": [""],
-        "//conditions:default": ["-mwaitpkg"],
-    }),
-    defines =
-        select({
-            "@platforms//cpu:x86_64": ["__TBB_NO_IMPLICIT_LINKAGE"],
-            "//conditions:default": [
-                "USE_PTHREAD",
-            ],
-        }) +
-        select({
-            "@bazel_tools//platforms:osx": ["_XOPEN_SOURCE"],
-            "//conditions:default": [],
-        }),
+    copts = ["-w", "-mwaitpkg"],
+    defines = ["__TBB_NO_IMPLICIT_LINKAGE"],
     includes = [
         "include",
     ],
-    linkopts =
-        select({
-            "@bazel_tools//platforms:windows": [],
-            "@bazel_tools//platforms:linux": [
-                "-ldl",
-                "-pthread",
-                "-lrt",
-            ],
-            "//conditions:default": ["-pthread"],
-        }),
-    local_defines = select({
-        "@platforms//cpu:x86_64": [
-            "__TBB_USE_ITT_NOTIFY",
-        ],
-        "//conditions:default": [],
-    }) + [
-        "__TBB_BUILD",
-    ],
-    textual_hdrs = select({
-        "@platforms//cpu:x86_64": [
-            "src/tbb/tools_api/ittnotify_static.c",
-        ],
-        "//conditions:default": [],
-    }),
+    linkopts = ["-ldl", "-pthread", "-lrt",],
+    local_defines = ["__TBB_USE_ITT_NOTIFY", "__TBB_BUILD",],
+    textual_hdrs = ["src/tbb/tools_api/ittnotify_static.c"],
 )
 
 cc_library(
