--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -25,7 +25,7 @@ cc_library(
     srcs = glob([
         "src/tbb/*.cpp",
         "src/tbb/*.h",
-        "src/tbb/tools_api/**/*.h",
+		"src/tbb/tools_api/**/*.h",
     ]),
     hdrs = glob([
         "include/tbb/*.h",
@@ -33,14 +33,14 @@ cc_library(
         "include/oneapi/tbb/*.h",
         "include/oneapi/tbb/detail/*.h",
     ]),
-    copts = ["-w", "-mwaitpkg"],
-    defines = ["__TBB_NO_IMPLICIT_LINKAGE"],
+    copts = ["-w", "-mwaitpkg",],
+    defines = ["__TBB_NO_IMPLICIT_LINKAGE",],
     includes = [
         "include",
     ],
     linkopts = ["-ldl", "-pthread", "-lrt",],
-    local_defines = ["__TBB_USE_ITT_NOTIFY", "__TBB_BUILD",],
-    textual_hdrs = ["src/tbb/tools_api/ittnotify_static.c"],
+    local_defines = ["__TBB_BUILD", "__TBB_USE_ITT_NOTIFY",],
+    textual_hdrs = ["src/tbb/tools_api/ittnotify_static.c",],
 )
 
 cc_library(
